--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CalculatorUI\CalculatorUI.csproj" />
     <ProjectReference Include="..\ClassLibrary1\ClassLibrary1.csproj" />
     <ProjectReference Include="..\TestProject1\TestProject1.csproj" />
   </ItemGroup>
